--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Show.DetailShowActivity">
+    tools:context=".Show.DetailShowActivity"
+    >
 
     <ScrollView
         android:layout_width="match_parent"
@@ -21,6 +21,7 @@
         app:layout_constraintVertical_bias="1.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/scroll_con4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,8 +35,10 @@
                 android:layout_height="300dp"
                 android:layout_marginStart="16dp"
 
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 map:layout_constraintEnd_toEndOf="parent"
                 map:layout_constraintStart_toStartOf="parent"
                 map:layout_constraintTop_toBottomOf="@+id/reservation_detailAddr"
@@ -53,15 +56,18 @@
                 android:background="@drawable/line_textview"
                 android:gravity="center_horizontal"
                 android:text="공연제목"
+                android:backgroundTint="@color/blue"
+                android:fontFamily="@font/cafe24oneprettynight"
                 android:textColor="#0C0606"
                 android:textSize="25sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/reservation_imageView"
+                android:id="@+id/reservation_imageView2"
                 android:layout_width="160dp"
                 android:layout_height="190dp"
                 android:layout_marginTop="16dp"
@@ -70,36 +76,28 @@
                 app:layout_constraintTop_toBottomOf="@+id/reservation_detailTitle"
                 app:srcCompat="@mipmap/ic_launcher" />
 
-            <Button
-                android:id="@+id/reservation_btn_add_review"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="16dp"
-                android:onClick="onClick"
-                android:text="리뷰 작성"
-                app:layout_constraintStart_toStartOf="parent"
-                map:layout_constraintTop_toBottomOf="@+id/reservation_detail_map" />
+
 
             <Button
                 android:id="@+id/reservation_btn_add_bookmark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="36dp"
+                android:layout_marginEnd="44dp"
                 android:onClick="onClick"
                 android:text="즐겨찾기"
                 app:layout_constraintEnd_toEndOf="parent"
                 map:layout_constraintTop_toBottomOf="@+id/reservation_detail_map" />
 
             <Button
-                android:id="@+id/reservation_btn_add_reservation"
+                android:id="@+id/btn_reservation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="60dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
+                android:layout_marginEnd="60dp"
                 android:onClick="onClick"
+
                 android:text="예약하기"
                 map:layout_constraintEnd_toStartOf="@+id/reservation_btn_add_bookmark"
                 map:layout_constraintStart_toEndOf="@+id/reservation_btn_add_review"
@@ -113,10 +111,12 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="32dp"
                 android:text="공연 장소"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
                 android:textColor="#050202"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/reservation_imageView" />
+                app:layout_constraintTop_toBottomOf="@+id/reservation_imageView2" />
 
             <TextView
                 android:id="@+id/reservation_detailStart"
@@ -126,6 +126,8 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="24dp"
                 android:text="시작일"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
                 android:textColor="#050101"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -139,6 +141,8 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="24dp"
                 android:text="종료일"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
                 android:textColor="#0B0707"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -154,6 +158,8 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:text="티켓 가격"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
                 android:textColor="#090202"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -172,6 +178,8 @@
                 android:layout_marginRight="16dp"
                 android:text="공연장 주소"
                 android:textColor="#070303"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -189,6 +197,8 @@
                 android:layout_marginRight="16dp"
                 android:text="공연장 URL"
                 android:textColor="#0C0404"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -203,24 +213,28 @@
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="35dp"
                 android:text="지역"
+                android:fontFamily="@font/cafe24oneprettynight"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/reservation_detailPlace"
-                app:layout_constraintTop_toBottomOf="@+id/reservation_imageView" />
+                app:layout_constraintTop_toBottomOf="@+id/reservation_imageView2" />
 
             <TextView
                 android:id="@+id/reservation_detailLink"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:text="예매처"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
                 android:textColor="#040202"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/reservation_detailPrice"
-                map:layout_constraintHorizontal_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/reservation_detailPrice" />
 
             <TextView
                 android:id="@+id/reservation_detailPhone"
@@ -232,6 +246,8 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:text="문의 번호"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
                 android:textColor="#050303"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
