--- a/app/src/main/res/layout/first_screen.xml
+++ b/app/src/main/res/layout/first_screen.xml
@@ -14,10 +14,11 @@
         android:layout_marginTop="184dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/line_textview"
-        android:fontFamily="@font/reko"
+        android:textStyle="bold"
+        android:fontFamily="@font/cafe24oneprettynight"
         android:gravity="center_horizontal"
         android:padding="20dp"
-        android:text="마음에 드는 공연을 찾아보세요!"
+        android:text="마음에 드는 공연을  찾아보세요!"
         android:textColor="#2B2B2B"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +32,9 @@
         android:layout_height="68dp"
         android:layout_marginBottom="136dp"
         android:text="회원가입"
+        android:background="@drawable/custom_button"
+        android:textStyle="bold"
+        android:fontFamily="@font/cafe24oneprettynight"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:backgroundTint="@color/blue2"
@@ -49,6 +53,7 @@
         android:layout_height="68dp"
         android:layout_marginBottom="136dp"
         android:text="로그인"
+        android:background="@drawable/custom_button"
         android:textColor="@color/black"
         android:textSize="18sp"
         app:backgroundTint="@color/blue2"
@@ -58,6 +63,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_mainTitle"
         app:layout_constraintVertical_bias="1.0"
+        android:textStyle="bold"
+        android:fontFamily="@font/cafe24oneprettynight"
         app:strokeColor="#FFFFFF"
         app:strokeWidth="2dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
