--- a/app/src/main/res/layout/activity_add_review.xml
+++ b/app/src/main/res/layout/activity_add_review.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Review.AddReviewActivity">
+    tools:context=".Main.MainMapActivity">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,96 +20,107 @@
         app:layout_constraintVertical_bias="1.0">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/scroll_con2"
+            android:id="@+id/scroll_con5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="28dp"
-                android:text="제목:"
-                android:textColor="#070404"
-                android:textSize="18sp"
+            <fragment
+                android:id="@+id/main_map"
+                android:name="com.google.android.gms.maps.MapFragment"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="80dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                map:layout_constraintTop_toBottomOf="@+id/et_search_place"
+                map:uiZoomControls="true" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:background="@color/blue"
+                android:padding="10dp"
+                android:gravity="center_horizontal"
+                android:text="주변 공연장"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
+                android:textColor="#0E0404"
+                android:textSize="20sp"
+
+                map:layout_constraintEnd_toEndOf="parent"
+                map:layout_constraintStart_toStartOf="parent"
+                map:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/btn_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:onClick="onClick"
+                android:text="HOME"
+                android:textStyle="bold"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:background="@drawable/custom_button"
+                android:backgroundTint="@color/blue"
+                map:layout_constraintEnd_toEndOf="parent"
+                map:layout_constraintStart_toStartOf="parent"
+                map:layout_constraintTop_toBottomOf="@+id/main_map" />
+
+            <TextView
+                android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="50dp"
-                android:text="리뷰 작성"
-                android:textColor="#090505"
+                android:layout_marginTop="21dp"
+                android:text="공연장 검색:"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:textStyle="bold"
+                android:textColor="#100909"
                 android:textSize="18sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView2" />
+                map:layout_constraintStart_toStartOf="parent"
+                map:layout_constraintTop_toBottomOf="@+id/textView6" />
 
             <EditText
-                android:id="@+id/et_write_title"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:id="@+id/et_search_place"
+                android:layout_width="170dp"
+                android:layout_height="49dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginTop="8dp"
                 android:ems="10"
-                android:hint="공연 제목을 입력하세요."
+                android:hint="장소를 입력하세요."
                 android:inputType="text"
-                android:textColor="#0C0909"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView2"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:textColor="#0C0303"
+                android:textSize="18sp"
+                map:layout_constraintStart_toEndOf="@+id/textView7"
+                map:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-            <EditText
-                android:id="@+id/et_write_review"
-                android:layout_width="0dp"
-                android:layout_height="413dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
+            <Button
+                android:id="@+id/btn_map_search"
+                android:layout_width="70dp"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:ems="10"
-                android:hint="리뷰를 작성하세요."
-                android:inputType="textMultiLine"
-                android:textColor="#0B0101"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-            <Button
-                android:id="@+id/btn_write_review"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="70dp"
-                android:layout_marginLeft="70dp"
-                android:layout_marginTop="16dp"
                 android:onClick="onClick"
-                android:text="추가"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_write_review" />
+                android:text="검색"
+                android:textStyle="bold"
+                android:fontFamily="@font/cafe24oneprettynight"
+                android:background="@drawable/custom_button"
+                android:backgroundTint="@color/blue"
+                map:layout_constraintEnd_toEndOf="parent"
+                map:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-            <Button
-                android:id="@+id/btn_write_cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="70dp"
-                android:layout_marginRight="70dp"
-                android:onClick="onClick"
-                android:text="취소"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/et_write_review" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
