--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Show.SearchShowActivity">
+    tools:context=".Main.FragmentSearch">
+
+
 
     <EditText
         android:id="@+id/et_place"
@@ -16,7 +18,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:ems="10"
-        android:hint="검색할 지역을 입력하세요."
+        android:hint="키워드를 입력하세요."
         android:inputType="text"
         app:layout_constraintEnd_toStartOf="@+id/btn_search"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,17 +50,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/et_place" />
 
-    <Button
-        android:id="@+id/btn_search_place"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:onClick="onClick"
-        android:text="공연장 위치"
-        android:background="@drawable/custom_button"
-        android:backgroundTint="@color/blue"
-        android:fontFamily="@font/cafe24oneprettynight"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lvList" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
