--- a/app/src/main/res/layout/activity_date_reservation.xml
+++ b/app/src/main/res/layout/activity_date_reservation.xml
@@ -11,35 +11,65 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="연극제목"
-        android:textSize="15pt"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="날짜"
-        android:textSize="8pt"
-        android:layout_gravity="center"
-        android:layout_margin="3dp"/>
-
+        android:textStyle="bold"
+        android:textSize="20pt"/>
     <LinearLayout
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:orientation="horizontal"
-        >
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <TextView
-            android:id="@+id/date"
-            android:layout_width="wrap_content"
+            android:textStyle="bold"
+            android:id="@+id/theater_title"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="8pt"
-            android:layout_weight="1"
+
+            android:text="극장"
+
             android:textAlignment="center"
-            android:text="날짜 표시" />
+            android:textSize="10pt" />
+        <TextView
+            android:id="@+id/theart_addr"
+            android:layout_marginLeft="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="극장표시"/>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:textStyle="bold"
+            android:id="@+id/date_title"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="날짜"
+
+            android:textAlignment="center"
+            android:textSize="10pt" />
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="309dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="날짜 표시"
+            android:textAlignment="center"
+            android:textSize="8pt" />
 
         <Button
             android:id="@+id/calender"
-            android:layout_width="58dp"
-            android:layout_height="wrap_content"
+            android:layout_width="70dp"
+            android:layout_height="72dp"
             android:layout_gravity="left"
             android:layout_margin="10dp"
             android:gravity="center"
@@ -48,27 +78,108 @@
 
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/date_theater"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="극장"
-        android:textSize="10pt"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+        <TextView
+            android:textStyle="bold"
+            android:id="@+id/price_title"
+            android:layout_width="60dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:text="가격"
+
+            android:textAlignment="center"
+            android:textSize="10pt" />
+        <TextView
+            android:id="@+id/price_theater"
+            android:layout_marginLeft="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="극장표시"/>
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/time_title"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="시간"
+            android:textStyle="bold"
+            android:textAlignment="center"
+            android:textSize="10pt" />
+
+        <TextView
+            android:id="@+id/time"
+            android:layout_width="309dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="시간 표시"
+            android:textAlignment="center"
+            android:textSize="8pt" />
 
         <Button
-            android:id="@+id/time1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:id="@+id/time_selector"
+            android:layout_width="70dp"
+            android:layout_height="72dp"
+            android:layout_gravity="left"
+            android:layout_margin="10dp"
+            android:gravity="center"
             android:text="시간"
+            app:backgroundTint="@color/blue" />
+
+    </LinearLayout>
+
+    <LinearLayout
+
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/seat_title"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:text="좌석"
+            android:textAlignment="center"
+            android:textSize="10pt" />
+
+        <TextView
+            android:id="@+id/seat"
+            android:layout_width="309dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:text="좌석 표시"
+            android:textAlignment="center"
+            android:textSize="8pt" />
+
+        <Button
+            android:id="@+id/select_seat"
+            android:layout_width="70dp"
+            android:layout_height="72dp"
+            android:layout_margin="5dp"
+            android:text="좌석 선택"
             app:backgroundTint="@color/blue" />
 
 
 
     </LinearLayout>
+
+
 
 </LinearLayout>
