--- a/app/src/main/res/layout/activity_detail_show.xml
+++ b/app/src/main/res/layout/activity_detail_show.xml
@@ -28,21 +28,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <fragment
-                android:id="@+id/detail_map"
-                android:name="com.google.android.gms.maps.MapFragment"
-                android:layout_width="0dp"
-                android:layout_height="300dp"
-                android:layout_marginStart="16dp"
+<!--            <fragment-->
+<!--                android:id="@+id/detail_map"-->
+<!--                android:name="com.google.android.gms.maps.MapFragment"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="300dp"-->
+<!--                android:layout_marginStart="16dp"-->
 
-                android:layout_marginLeft="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"
-                map:layout_constraintEnd_toEndOf="parent"
-                map:layout_constraintStart_toStartOf="parent"
-                map:layout_constraintTop_toBottomOf="@+id/tv_detailAddr"
-                map:uiZoomControls="true" />
+<!--                android:layout_marginLeft="16dp"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:layout_marginEnd="16dp"-->
+<!--                android:layout_marginRight="16dp"-->
+<!--                map:layout_constraintEnd_toEndOf="parent"-->
+<!--                map:layout_constraintStart_toStartOf="parent"-->
+<!--                map:layout_constraintTop_toBottomOf="@+id/tv_detailAddr"-->
+<!--                map:uiZoomControls="true" />-->
 
             <TextView
                 android:id="@+id/tv_detailTitle"
@@ -76,41 +76,40 @@
                 app:layout_constraintTop_toBottomOf="@+id/tv_detailTitle"
                 app:srcCompat="@mipmap/ic_launcher" />
 
-            <Button
-                android:id="@+id/btn_add_review"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="44dp"
-                android:layout_marginTop="16dp"
-                android:onClick="onClick"
-                android:text="리뷰 작성"
-                app:layout_constraintStart_toStartOf="parent"
-                map:layout_constraintTop_toBottomOf="@+id/detail_map" />
+<!--            <Button-->
+<!--                android:id="@+id/btn_add_review"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginStart="44dp"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:onClick="onClick"-->
+<!--                android:text="리뷰 작성"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                map:layout_constraintTop_toBottomOf="@+id/detail_map" />-->
 
-            <Button
-                android:id="@+id/btn_add_bookmark"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="44dp"
-                android:onClick="onClick"
-                android:text="즐겨찾기"
-                app:layout_constraintEnd_toEndOf="parent"
-                map:layout_constraintTop_toBottomOf="@+id/detail_map" />
+<!--            <Button-->
+<!--                android:id="@+id/btn_add_bookmark"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:layout_marginEnd="44dp"-->
+<!--                android:onClick="onClick"-->
+<!--                android:text="즐겨찾기"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                map:layout_constraintTop_toBottomOf="@+id/detail_map" />-->
 
             <Button
                 android:id="@+id/btn_reservation"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="60dp"
+                android:layout_marginTop="30dp"
+
                 android:onClick="onClick"
 
                 android:text="예매하기"
-                map:layout_constraintEnd_toStartOf="@+id/btn_add_bookmark"
-                map:layout_constraintStart_toEndOf="@+id/btn_add_review"
-                map:layout_constraintTop_toBottomOf="@+id/detail_map" />
+                map:layout_constraintEnd_toEndOf="parent"
+                map:layout_constraintStart_toStartOf="parent"
+                map:layout_constraintTop_toBottomOf="@+id/tv_detailAddr" />
 
             <TextView
                 android:id="@+id/tv_detailPlace"
