마이페이지 파이어베이스로 데이터 받기와 나의 예약확인하기 액티비티 추가
나의 예약 부분만 하면됨

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         app:menu="@menu/menu"
-        app:itemTextColor="@color/menu_colors"
-        app:itemIconTint="@color/menu_colors"/>
+        app:itemTextColor="@color/white"
+        app:itemBackground="@color/blue"
+        app:itemIconTint="@color/white"/>
 
 
 
