--- a/app/src/main/res/layout/activity_date_reservation.xml
+++ b/app/src/main/res/layout/activity_date_reservation.xml
@@ -7,33 +7,43 @@
     android:orientation="vertical">
 
     <TextView
+        android:layout_marginTop="20dp"
         android:id="@+id/date_performName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="연극제목"
+        android:fontFamily="@font/cafe24oneprettynight"
+        android:textAlignment="center"
         android:textStyle="bold"
         android:textSize="20pt"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:orientation="horizontal">
+
         <TextView
-            android:textStyle="bold"
             android:id="@+id/theater_title"
-            android:layout_width="60dp"
+            android:layout_width="74dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-
+            android:layout_marginLeft="0dp"
+            android:fontFamily="@font/cafe24oneprettynight"
             android:text="극장"
 
             android:textAlignment="center"
-            android:textSize="10pt" />
+            android:textSize="10pt"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/theart_addr"
-            android:layout_marginLeft="15dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="극장표시"/>
+            android:layout_marginLeft="15dp"
+            android:paddingLeft="40dp"
+
+            android:text="극장표시" />
 
 
     </LinearLayout>
@@ -45,16 +55,18 @@
         android:orientation="horizontal">
 
         <TextView
-            android:textStyle="bold"
             android:id="@+id/date_title"
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="12dp"
             android:layout_weight="1"
+            android:fontFamily="@font/cafe24oneprettynight"
             android:text="날짜"
 
             android:textAlignment="center"
-            android:textSize="10pt" />
+            android:textSize="10pt"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/date"
@@ -63,6 +75,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:text="날짜 표시"
+            android:fontFamily="@font/cafe24oneprettynight"
             android:textAlignment="center"
             android:textSize="8pt" />
 
@@ -71,7 +84,8 @@
             android:layout_width="70dp"
             android:layout_height="72dp"
             android:layout_gravity="left"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
+            android:fontFamily="@font/cafe24oneprettynight"
             android:gravity="center"
             android:text="달력"
             app:backgroundTint="@color/blue" />
@@ -81,24 +95,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:orientation="horizontal">
+
         <TextView
-            android:textStyle="bold"
             android:id="@+id/price_title"
-            android:layout_width="60dp"
+            android:layout_width="74dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="0dp"
 
+            android:fontFamily="@font/cafe24oneprettynight"
             android:text="가격"
-
             android:textAlignment="center"
-            android:textSize="10pt" />
+            android:textSize="10pt"
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/price_theater"
-            android:layout_marginLeft="15dp"
             android:layout_width="match_parent"
+            android:paddingLeft="40dp"
             android:layout_height="match_parent"
-            android:text="극장표시"/>
+            android:layout_marginLeft="15dp"
+
+            android:text="가격 표시" />
 
 
     </LinearLayout>
@@ -110,14 +130,16 @@
 
         <TextView
             android:id="@+id/time_title"
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="12dp"
             android:layout_weight="1"
+            android:fontFamily="@font/cafe24oneprettynight"
             android:text="시간"
-            android:textStyle="bold"
             android:textAlignment="center"
-            android:textSize="10pt" />
+            android:textSize="10pt"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/time"
@@ -126,6 +148,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:text="시간 표시"
+            android:fontFamily="@font/cafe24oneprettynight"
             android:textAlignment="center"
             android:textSize="8pt" />
 
@@ -134,7 +157,8 @@
             android:layout_width="70dp"
             android:layout_height="72dp"
             android:layout_gravity="left"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
+            android:fontFamily="@font/cafe24oneprettynight"
             android:gravity="center"
             android:text="시간"
             app:backgroundTint="@color/blue" />
@@ -147,16 +171,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <TextView
             android:id="@+id/seat_title"
-            android:layout_width="80dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginLeft="12dp"
             android:layout_weight="1"
-            android:textStyle="bold"
+            android:fontFamily="@font/cafe24oneprettynight"
             android:text="좌석"
             android:textAlignment="center"
-            android:textSize="10pt" />
+            android:textSize="10pt"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/seat"
@@ -165,6 +192,7 @@
             android:layout_gravity="center"
             android:layout_weight="1"
             android:text="좌석 표시"
+            android:fontFamily="@font/cafe24oneprettynight"
             android:textAlignment="center"
             android:textSize="8pt" />
 
@@ -174,6 +202,7 @@
             android:layout_height="72dp"
             android:layout_margin="5dp"
             android:text="좌석 선택"
+            android:fontFamily="@font/cafe24oneprettynight"
             app:backgroundTint="@color/blue" />
 
 
