--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:text="예약 관리 시스템"
+        android:background="@color/blue"
         android:fontFamily="@font/cafe24oneprettynight"
         android:textAlignment="center"
         android:textColor="#040404"
@@ -30,8 +31,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:fontFamily="@font/cafe24oneprettynight"
+
         android:hint="e-mail을 입력하세요"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,13 +44,25 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:textColor="@color/black"
         android:hint="password를 입력하세요"
         android:inputType="textPassword"
-        android:fontFamily="@font/cafe24oneprettynight"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailEt" />
+
+    <ImageView
+        android:id="@+id/reservation_icon"
+        android:layout_width="265dp"
+        android:layout_height="250dp"
+        android:src="@drawable/play"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/register_t2" />
 
     <Button
         android:id="@+id/login_btn"
