--- a/app/src/main/res/layout/activity_seat_reservation.xml
+++ b/app/src/main/res/layout/activity_seat_reservation.xml
@@ -1,75 +1,24 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<?xml version="1.0" encoding="UTF-8"?>
 
-    <TextView
-        android:id="@+id/seat_date"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="날짜"
-        android:gravity="center"
-        android:textSize="15pt"/>
-    <TextView
-        android:id="@+id/seat_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="10pt"
-        android:gravity="center"
-        android:text="시간"/>
+    <LinearLayout android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:layout_margin="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:textSize="15pt" android:gravity="center" android:fontFamily="@font/cafe24oneprettynight" android:textStyle="bold" android:text="날짜" android:id="@+id/seat_date"/>
 
-        <Button
-            android:id="@+id/minus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-"
-            app:backgroundTint="@color/blue" />
-
-        <TextView
-            android:id="@+id/seat_count"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:textSize="10pt"
-            android:text="0"/>
-
-        <Button
-            android:id="@+id/plus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:text="+"
-            app:backgroundTint="@color/blue" />
+    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:textSize="15pt" android:gravity="center" android:fontFamily="@font/cafe24oneprettynight" android:textStyle="bold" android:text="시간" android:id="@+id/seat_time"/>
 
 
-    </LinearLayout>
+    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_margin="10dp">
 
-    <TextView
-        android:id="@+id/seat_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="8pt"
-        android:text="극장/날짜/시간/좌석정보"/>
+    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:fontFamily="@font/cafe24oneprettynight" android:text="-" android:id="@+id/minus" app:backgroundTint="@color/blue" android:background="@drawable/custom_button"/>
 
-    <Button
-        android:id="@+id/reserve"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="예매하기"
-        app:backgroundTint="@color/blue" />
+    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:textSize="10pt" android:gravity="center" android:fontFamily="@font/cafe24oneprettynight" android:text="0" android:id="@+id/seat_count" android:layout_weight="1"/>
 
+    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:fontFamily="@font/cafe24oneprettynight" android:text="+" android:id="@+id/plus" app:backgroundTint="@color/blue" android:backgroundTint="@color/blue" android:background="@drawable/custom_button"/>
 
+</LinearLayout>
 
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textSize="8pt" android:fontFamily="@font/cafe24oneprettynight" android:textStyle="bold" android:text="극장/날짜/시간/좌석정보" android:id="@+id/seat_info" android:layout_gravity="center"/>
+
+    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:fontFamily="@font/cafe24oneprettynight" android:text="예매하기" android:id="@+id/reserve" android:layout_margin="10dp" app:backgroundTint="@color/blue" android:background="@drawable/custom_button"/>
 
 </LinearLayout>
